# CHK-vxas01

./: pyproject.toml
lib/solutions/CHK/: checkout_solution.py  input_parser.py  test_input.txt
lib/solutions/HLO/: hello_solution.py
test/solution_tests/CHK/: test_checkout_1.py  test_checkout_2.py  test_checkout_3.py  test_checkout_5.py
test/solution_tests/HLO/: test_hello.py
test/solution_tests/SUM/: test_sum.py
